--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
         "vue": "^3.4.0"
+    },
+    "dependencies": {
+        "mapbox-gl": "^3.8.0"
     }
 }
